force-app/main/default/objects/abd_Distilled_Spirit_Company__c/abd_Distilled_Spirit_Company__c.object-meta.xml
<CustomObject>
    <label>Distilled Spirit Company</label>
    <nameField>
        <displayFormat>DSP-{0000}</displayFormat>
        <label>Distilled Spirit Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distilled Spirit Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>