force-app/main/default/objects/abd_Distilled_Spirit_Company__c/fields/abd_Account__c.field-meta.xml
<CustomField>
    <fullName>abd_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Distilled Spirit Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distilled Spirit Companies</relationshipLabel>
    <relationshipName>Distilled_Spirit_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>