force-app/main/default/objects/abd_Distilled_Spirit_Company__c/fields/abd_Application__c.field-meta.xml
<CustomField>
    <fullName>abd_Application__c</fullName>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Distilled Spirit Companies</relationshipLabel>
    <relationshipName>Distilled_Spirit_Companies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>