force-app/main/default/objects/abd_Distilled_Spirit_Company__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Distilled Spirit Companies</relationshipLabel>
    <relationshipName>Distilled_Spirit_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>